# jenviz

./: .gitignore  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
jenviz/: __init__.py
snap/: snapcraft.yaml
