[metadata]
name = jenviz
url = https://github.com/toabctl/jenviz
author = Thomas Bechtold
author_email = thomasbechtold@jpberlin.de
license = Apache-2.0
long-description = file: README.rst
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
package_dir=
  =.
packages = find:
install_requires =
  python-jenkins
  graphviz
  urllib3 < 2
setup_requires =
  setuptools_scm
  
[options.extras_require]
tests =
  flake8

[options.entry_points]
console_scripts =
  jenviz = jenviz:main
